<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

	<Button
	    android:id="@+id/selectImageButton"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/select_picture" />
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/take_picture"
	    android:id="@+id/takePictureButton"
	    android:onClick="dispatchTakePictureIntent" />
	<TextView 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text=""
	    android:id="@+id/messageText"
	    android:textStyle="bold" />
	<Spinner
	    android:id="@id/categories_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/categories"
	    android:prompt="@string/categories_prompt" />
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/share_picture"
	    android:id="@+id/uploadButton" />
		
</LinearLayout>
