<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity" >

	<LinearLayout
		android:id="@+id/llProfile"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"
		android:orientation="horizontal"
		android:weightSum="3"
		android:visibility="gone">

		<ImageView
			android:id="@+id/imgProfilePic"
			android:layout_width="80dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="10dp"
			android:orientation="vertical"
			android:layout_weight="2" >

			<TextView
				android:id="@+id/txtName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:textSize="20sp" />

			<TextView
				android:id="@+id/txtEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:textSize="18sp" />
		</LinearLayout>
	</LinearLayout>

	<com.google.android.gms.common.SignInButton
		android:id="@+id/btn_sign_in"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="20dp"/>

	<Button
		android:id="@+id/btn_sign_out"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_logout_from_google"
		android:visibility="gone"
		android:layout_marginBottom="10dp"/>

	<Button
		android:id="@+id/btn_revoke_access"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_revoke_access"
		android:visibility="gone" />

	<Button
	    android:id="@+id/btn_upload_to_server"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@drawable/arrow"
	    android:text="@string/btn_upload_to_server"
	    android:visibility="gone" />

	<Spinner
	    android:id="@+id/categories_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:entries="@array/categories"
	    android:prompt="@string/categories_prompt"
	    android:visibility="gone" />
	
	<Button
		android:id="@+id/btn_browse_pictures"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/btn_browse_pictures"
		android:visibility="gone" />
	
		<com.facebook.widget.LoginButton
		android:id="@+id/fb_login_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        facebook:confirm_logout="false"
        facebook:fetch_user_info="true" />	    

</LinearLayout>